# nanocaml

./: .gitignore  .ocamlformat  dune  dune-project  jj-config.toml
src/: ast.ml  driver.ml  dune  lang.ml  lang_codegen.ml  pass.ml  pass_codegen.ml  pass_typeck.ml
test/: docs_example.ml  dune  expand_tests.ml  lang_codegen_tests.ml  parsing_tests.ml  pass_codegen_tests.ml  pass_typeck_tests.ml
